--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test EventBus in Browser</title>
-    <link href="node_modules/mocha/mocha.css" type="text/css" rel="stylesheet">
-    <script src="node_modules/mocha/mocha.js"></script>
+    <title>Test Waltz Core</title>
+    <!-- mocha -->
+    <link href="https://unpkg.com/mocha@4.0.1/mocha.css" rel="stylesheet" />
 
-    <script type="module" src="test/setup.js"></script>
-    <script type="module" src="test/run.js"></script>
+    <script src="https://unpkg.com/chai@4.1.2/chai.js"></script>
+    <script src="https://unpkg.com/mocha@4.0.1/mocha.js"></script>
+    <!-- webix -->
+    <link rel="stylesheet" href="https://cdn.webix.com/7.0/skins/mini.css" type="text/css">
+    <script type="application/javascript" src="https://cdn.webix.com/7.0/webix.js"></script>
+
+    <!--script type="module" src="test/setup.js"></script>
+    <script type="module" src="test/run.js"></script-->
+    <script type="module" src="test/core.test.js"></script>
 <body>
 <div id="mocha"></div>
 </body>
