--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--script type="module" src="test/setup.js"></script>
     <script type="module" src="test/run.js"></script-->
-    <script type="module" src="test/core.test.js"></script>
+    <script type="module" src="test/test.js"></script>
 <body>
 <div id="mocha"></div>
 </body>
